--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,6 @@
 workflows:
   android-build:
     name: Android Build
-    max_build_duration: 60
 
     environment:
       flutter: stable
@@ -9,7 +8,9 @@ workflows:
     scripts:
       - flutter clean
       - flutter pub get
+      - flutter create .
       - flutter build apk --release
 
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
+      
