--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,16 +1,27 @@
 workflows:
-  android-build:
+  android-workflow:
     name: Android Build
-
+    max_build_duration: 30
+    
     environment:
       flutter: stable
-
+      xcode: latest
+      cocoapods: default
+    
     scripts:
-      - flutter clean
-      - flutter pub get
-      - flutter create .
-      - flutter build apk --release
-
+      - name: Get Flutter packages
+        script: flutter pub get
+      
+      - name: Generate app icons
+        script: dart run flutter_launcher_icons
+      
+      - name: Build APK
+        script: flutter build apk --release
+    
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
-      
+    
+    publishing:
+      email:
+        recipients:
+          mihailulybin67@gmail.com
