--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,5 @@
 workflows:
-  android-workflow:
+  android-build:              # ← БЫЛО android-workflow, СТАЛО android-build
     name: Android Build
     max_build_duration: 30
     
@@ -24,4 +24,4 @@ workflows:
     publishing:
       email:
         recipients:
-        - mihailulybin67@gmail.com
+          - твоя.почта@gmail.com
