--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dev_dependencies:
 
 flutter_launcher_icons:
   android: true
-  ios: true
+  ios: false                    # ← ИЗМЕНЕНО: было true, стало false
   image_path: "icon.png"
   adaptive_icon_background: "#1E88E5"
   adaptive_icon_foreground: "icon.png"
