--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,5 @@
 workflows:
-  android-build:              # ← БЫЛО android-workflow, СТАЛО android-build
+  android-build:
     name: Android Build
     max_build_duration: 30
     
@@ -11,6 +11,9 @@ workflows:
     scripts:
       - name: Get Flutter packages
         script: flutter pub get
+      
+      - name: Create Flutter project structure
+        script: flutter create . --platforms=android
       
       - name: Generate app icons
         script: dart run flutter_launcher_icons
