--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_animate: ^4.5.0
   animations: ^2.0.11
   flutter_svg: ^2.0.10+1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +25,7 @@ dev_dependencies:
 
 flutter_launcher_icons:
   android: true
-  ios: false                    # ← ИЗМЕНЕНО: было true, стало false
+  ios: false
   image_path: "icon.png"
   adaptive_icon_background: "#1E88E5"
   adaptive_icon_foreground: "icon.png"
