--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: vpn_app
-description: Premium iOS-style VPN application
+name: arctic_vpn
+description: Arctic VPN - iOS style VPN app
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -9,26 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  flutter_riverpod: ^2.5.1
-  cupertino_icons: ^1.0.8
-  flutter_animate: ^4.5.0
-  animations: ^2.0.11
-  flutter_svg: ^2.0.10+1
+  cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.13.1
-
-flutter_launcher_icons:
-  android: true
-  ios: false
-  image_path: "icon.png"
-  adaptive_icon_background: "#1E88E5"
-  adaptive_icon_foreground: "icon.png"
+  flutter_lints: ^3.0.1
 
 flutter:
-  uses-material-design: false
+  uses-material-design: true
