--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: arctic_vpn
-description: Arctic VPN for Android
+description: Arctic VPN
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -9,10 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # Заменил cupertino_icons на material + адаптивные иконки
-  material_design_icons_flutter: ^7.0.7296
   shared_preferences: ^2.2.2
-  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
